[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/ReactorControlPanel.gd" type="Script" id=1]

[node name="ReactorControlPanel" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ReactorPanel" type="Panel" parent="."]
margin_right = 392.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRStates" type="VBoxContainer" parent="ReactorPanel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 208.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlModeButton" type="OptionButton" parent="ReactorPanel"]
margin_left = 120.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 32.0
text = "CRMODE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReactorPanel/ControlModeButton"]
margin_left = -112.0
margin_right = -5.0
margin_bottom = 24.0
text = "CR MODE SELECT"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setpoint" type="VSlider" parent="ReactorPanel"]
margin_left = 216.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 184.0
step = 0.1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReactorPanel/Setpoint"]
margin_left = 24.0
margin_top = 56.0
margin_right = 64.0
margin_bottom = 120.0
text = "0%
0 m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoreTempLabel" type="Label" parent="ReactorPanel"]
margin_left = 288.0
margin_top = 8.0
margin_right = 384.0
margin_bottom = 24.0
text = "100 °C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorePowerLabel" type="Label" parent="ReactorPanel"]
margin_left = 288.0
margin_top = 24.0
margin_right = 384.0
margin_bottom = 40.0
text = "800 MW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PDUPowerLabel" type="Label" parent="ReactorPanel"]
margin_left = 288.0
margin_top = 64.0
margin_right = 376.0
margin_bottom = 96.0
text = "800 MW IN
300 MW OUT
500 MW EXC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoolantPanel" type="Panel" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 392.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlowEnable" type="CheckButton" parent="CoolantPanel"]
margin_left = 112.0
margin_top = 8.0
margin_right = 188.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CoolantPanel/FlowEnable"]
margin_left = -104.0
margin_right = -13.0
margin_bottom = 40.0
text = "FLOW ENABLE"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlowRate" type="ProgressBar" parent="CoolantPanel"]
margin_left = 8.0
margin_top = 48.0
margin_right = 184.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CoolantPanel/FlowRate"]
margin_top = 32.0
margin_right = 88.0
margin_bottom = 48.0
text = "7580 l/s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerDrawLabel" type="Label" parent="CoolantPanel"]
margin_left = 96.0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 96.0
text = "180 kW"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempInLabel" type="Label" parent="CoolantPanel"]
margin_left = 8.0
margin_top = 104.0
margin_right = 96.0
margin_bottom = 120.0
text = "IN 275 °C"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempOutLabel" type="Label" parent="CoolantPanel"]
margin_left = 96.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 120.0
text = "OUT 315 °C"
align = 1

[node name="APUPanel" type="Panel" parent="."]
margin_top = 200.0
margin_right = 192.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APUEnable" type="CheckButton" parent="APUPanel"]
margin_left = 112.0
margin_top = 8.0
margin_right = 188.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="APUPanel/APUEnable"]
margin_left = -104.0
margin_right = -13.0
margin_bottom = 40.0
text = "APU ENABLE"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagEngage" type="CheckButton" parent="APUPanel"]
margin_left = 112.0
margin_top = 56.0
margin_right = 188.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="APUPanel/MagEngage"]
margin_left = -104.0
margin_right = -13.0
margin_bottom = 40.0
text = "MAG ENGAGE"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPMLabel" type="Label" parent="APUPanel"]
margin_left = 8.0
margin_top = 104.0
margin_right = 96.0
margin_bottom = 120.0
text = "0 RPM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="APUPanel"]
margin_left = 96.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 120.0
text = "0 kW"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ReactorPanel/ControlModeButton" to="." method="_on_RodModeButton_item_selected"]
[connection signal="toggled" from="CoolantPanel/FlowEnable" to="." method="_on_FlowEnable_toggled"]
[connection signal="toggled" from="APUPanel/APUEnable" to="." method="_on_APUEnable_toggled"]
[connection signal="toggled" from="APUPanel/MagEngage" to="." method="_on_MagEngage_toggled"]
